# cold-AI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: agent-eval.yml
docs/: OSS_REFERENCES.md  outreach_knowledge_base.md
src/cold_ai/: cli.py  config.py  db.py  repositories.py
src/cold_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cold_ai/agents/: __init__.py  copywriter_agent.py  lead_intelligence_agent.py  orchestrator_agent.py  reflection_agent.py  research_agent.py  rewrite_agent.py  routing_agent.py  supervisor_agent.py
src/cold_ai/services/: __init__.py  agent_contracts.py  ai_agent_runtime.py  approval_service.py  campaign_service.py  csv_io.py  draft_service.py  email_provider.py  eval_harness.py  guardrails.py  import_service.py  llm_router.py  outreach_knowledge_base.py  outreach_memory.py  send_service.py  template_router.py  whatsapp_provider.py
src/cold_ai/tools/: __init__.py  base.py  email_tool.py  outreach_knowledge_tool.py  outreach_memory_tool.py  registry.py  telegram_tool.py  web_search_tool.py  whatsapp_tool.py
src/cold_ai/web/: __init__.py  app.py
src/cold_ai/web/static/: app.css  app.js  index.html  start.html
templates/: body_default.txt  subject_default.txt
templates/specialties/: body_cardiology.txt  body_dentiste.txt  body_nutrition.txt  subject_cardiology.txt  subject_dentiste.txt  subject_nutrition.txt
templates/web/: campaign.html  index.html
